# DRF_sample

./: .gitignore  README.md  pyproject.toml
drf_sample/products/: models.py  serializers.py  urls.py  views.py
drf_sample/products/migrations/: 0001_initial.py  0002_product_owner.py
drf_sample/project_config/: settings.py  urls.py
drf_sample/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
drf_sample/snippets/migrations/: 0001_initial.py
